--- a/Clinic/Clinic.Api/Clinic.Api.csproj
+++ b/Clinic/Clinic.Api/Clinic.Api.csproj
@@ -7,7 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\Appointment.Grpc\Protos\Appointment.proto" GrpcServices="Client">
+      <Link>Protos\Appointment.proto</Link>
+    </Protobuf>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\Appointment\" />
+    <Folder Include="Services\Appointment\" />
   </ItemGroup>
 
 </Project>
