--- a/Clinic/Appointment.Contract/Appointment.Contract.csproj
+++ b/Clinic/Appointment.Contract/Appointment.Contract.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Appointment.Domain\Appointment.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
