--- a/Clinic/Appointment.Frameworks.EfCore/Appointment.Frameworks.EfCore.csproj
+++ b/Clinic/Appointment.Frameworks.EfCore/Appointment.Frameworks.EfCore.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Appointment.Contract\Appointment.Contract.csproj" />
+    <ProjectReference Include="..\Appointment.Domain\Appointment.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
