--- a/Clinic/Appointment.Grpc/appsettings.json
+++ b/Clinic/Appointment.Grpc/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "connectionString": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,6 +10,11 @@
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
+    },
+    "Endpoints": {
+      "Http": {
+        "Url": "http://IPAddress:8081"
+      }
     }
   }
 }
