--- a/Clinic/Appointment.UseCases/Appointment.UseCases.csproj
+++ b/Clinic/Appointment.UseCases/Appointment.UseCases.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Appointment.Contract\Appointment.Contract.csproj" />
+  </ItemGroup>
+
 </Project>
