--- a/Clinic/Clinic.Api/appsettings.json
+++ b/Clinic/Clinic.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppointmentClient": "http://IPAddress:8081"
 }
